# azimut_test_task

./: .gitignore  CMakeLists.txt  main.cpp
res/test_files/: 1_in.txt  2_in.txt
src/builder/: builder.cpp  builder.h
src/defs/: defs.h
src/reader/: reader.h
src/reader/text_file_reader/: text_file_reader.cpp  text_file_reader.h
src/task/: task.h
src/task/checker_task/: checker_task.cpp  checker_task.h
src/threadpool/: threadpool.cpp  threadpool.h
src/utils/: utils.h
src/writer/: writer.h
src/writer/text_file_writer/: text_file_writer.cpp  text_file_writer.h
